# basix-engine

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-bump-image.yml
workflows/_flows/: svim_brain.yml  svim_router_flow.yml
workflows/_flows/bonnke/: bonnke_brain.yml
workflows/_flows/svim/: agent.yml  svim_brain.yml
workflows/bonnke/brain/tasks/: .env.example  graph.py  greetings.py  main.py  pyproject.toml  requirements.txt  state.py  utils.py
workflows/svim/: Dockerfile  requirements.txt
workflows/svim/agents/: base_agent.py  embeddings.py  http_client.py  infra.py  llm_client.py  main.py  maria.py  prompts.py  requirements.txt  run_once.py  vector_store.py
workflows/svim/agents/catalog/: __init__.py  sync.py
workflows/svim/agents/resolvers/: customer.py  service.py
workflows/svim/agents/tools/: index.py  professionals.py  schedule.py  services.py
workflows/svim/brain/tasks/: svim_greetings.py
workflows/svim/router_flow/: service_task.py
workflows/svim/tests/: test_e2e_flow.py  test_resolvers.py
workflows/svim_brain/tasks/: svim_greetings.py  svim_router_flow.py
workflows/svim_router_flow/tasks/: professional_task.py  schedule_task.py
